--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-VITE_BACKEND_URL = "https://auth-todo-3ctm.onrender.com"
+# VITE_BACKEND_URL = "https://auth-todo-frontend.onrender.com/api"
+VITE_BACKEND_URL = "http://localhost:5000/api"
