--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 # VITE_BACKEND_URL = "https://auth-todo-frontend.onrender.com/api"
-VITE_BACKEND_URL = "http://localhost:5000/api"
+#VITE_BACKEND_URL = "http://localhost:5000/api"
+VITE_BACKEND_URL ="https://auth-todo-backend-6btb.onrender.com/api"
