--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
 # VITE_BACKEND_URL = "https://auth-todo-frontend.onrender.com/api"
 #VITE_BACKEND_URL = http://localhost:5000/api
-VITE_BACKEND_URL =https://auth-todo-backend-6btb.onrender.com/api
+#VITE_BACKEND_URL =https://auth-todo-backend-6btb.onrender.com/api
+VITE_BACKEND_URL =https://register-j60pt2k8z-altaf1k1ps-projects.vercel.app/
