--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,8 +1,8 @@
 {
-    "rewrites":[
-        {
-            "source":"/(.*)",
-            "destination":"/"
-        }
+    "version": 2,
+    "routes": [
+      { "src": "/api/(.*)", "dest": "/api/$1" },
+      { "src": "/(.*)", "dest": "/index.html" }
     ]
-}
+  }
+  
